Closed
Bug 700042
Opened 14 years ago
Closed 14 years ago
"Syntax Highlighting" button in view source-code menu doesn't work
Categories
(Core :: DOM: HTML Parser, defect)
Tracking
()
RESOLVED
FIXED
mozilla10
| Tracking | Status | |
|---|---|---|
| firefox10 | - | --- |
People
(Reporter: theo, Assigned: hsivonen)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
3.32 KB,
patch
|
smaug
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:10.0a1) Gecko/20111105 Firefox/10.0a1
Build ID: 20111105031111
Steps to reproduce:
Click on the "Syntax Highlighting" menu item on the view-source page.
Actual results:
The menu item is uncheck, but nothing happened to the code.
Expected results:
The code should be discolored.
Comment 1•14 years ago
|
||
Confirming this on Linux with latest nightly.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 2•14 years ago
|
||
This either needs to be fixed before Tuesday.
Otherwise either the feature or menu choice needs to be removed after Firefox 10 goes to Aurora.
tracking-firefox10:
--- → ?
Comment 3•14 years ago
|
||
Not strictly a regression, but bug 482921 added a non-functional menu choice which would seem to be a bad thing to have in a released product.
Blocks: 482921
Keywords: regression
Updated•14 years ago
|
Component: Developer Tools → HTML: Parser
Product: Firefox → Core
QA Contact: developer.tools → parser
Comment 4•14 years ago
|
||
Moved to Core:HTML Parser, which is where bug 482921 was filed.
Updated•14 years ago
|
Hardware: x86_64 → All
| Assignee | ||
Comment 5•14 years ago
|
||
(In reply to Bill Gianopoulos from comment #3)
> Not strictly a regression, but bug 482921 added a non-functional menu choice
Bug 482921 didn't add the menu choice. It was there before.
With old View Source, turning off highlights didn't turn off href linkification, so here's a patch that turns off the coloring but keeps the links (which remain colored as in the old impl).
| Assignee | ||
Comment 6•14 years ago
|
||
Marking dependent of bug 696585 so that a test case for this bug can be added once bug 696585 has been fixed.
Depends on: 696585
Comment 7•14 years ago
|
||
Comment on attachment 572400 [details] [diff] [review]
Actually do something with mSyntaxHighlight
Could you file a followup to change syntax highlighting so that reload
isn't needed. (That would require some changes to viewsource.js and to the
css. )
Attachment #572400 -
Flags: review?(bugs) → review+
| Assignee | ||
Comment 8•14 years ago
|
||
(In reply to Olli Pettay [:smaug] from comment #7)
> Could you file a followup to change syntax highlighting so that reload
> isn't needed. (That would require some changes to viewsource.js and to the
> css. )
I filed bug 700382. I have doubts about offering the toggle in the UI at all.
Thanks for the review.
https://hg.mozilla.org/integration/mozilla-inbound/rev/9c1cdf04b728
Comment 10•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla10
Updated•14 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•