Bug 700042 - Support turning off View Source syntax highlighting. r=smaug.